# ROSbot

./: .gitignore  README.md
ROS/: README.md
ROS/src/: README.md
ROS/src/robot_bringup/: CMakeLists.txt  README.md  package.xml
ROS/src/robot_bringup/launch/: robot_bringup.launch  simulation_bringup.launch
ROS/src/robot_control/: CMakeLists.txt  README.md  package.xml
ROS/src/robot_control/config/: key_teleop.yaml  mouse_teleop.yaml  twist_mux_topics.yaml
ROS/src/robot_control/launch/: key_teleop.launch  mouse_teleop.launch  mouse_teleop_mux.launch  teleop_keyboard.launch  teleop_keyboard_mux.launch  twist_mux.launch
ROS/src/robot_description/: CMakeLists.txt  README.md  package.xml
ROS/src/robot_description/config/: description.rviz
ROS/src/robot_description/launch/: description.launch  robot_description.launch
ROS/src/robot_description/urdf/: diff_wheeled_robot.xacro  wheel.urdf.xacro
ROS/src/robot_hardware/: CMakeLists.txt  README.md  package.xml
ROS/src/robot_hardware/config/: controllers.yaml  hardware.yaml
ROS/src/robot_hardware/include/robot_hardware/: robot_hardware.h  robot_hardware_interface.h
ROS/src/robot_hardware/launch/: robot_hardware.launch  robot_hardware_simulation.launch  robot_position_controllers.launch
ROS/src/robot_hardware/src/: robot_hardware_interface.cpp  robot_hardware_interface_node.cpp
ROS/src/robot_navigation/: CMakeLists.txt  README.md  package.xml
ROS/src/robot_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  navigation.rviz
ROS/src/robot_navigation/launch/: move_base.launch
ROS/src/robot_navigation/maps/: terrain.pgm
STM32/: .cproject  .mxproject  .project  README.md  STM32F411RETX_FLASH.ld  STM32F411RETX_RAM.ld  robot.ioc
STM32/Core/Inc/: main.h  mainpp.h  robot.h  robot_Encoder.h  robot_Motor.h  robot_PID.h  robot_VelocityJoint.h  robot_config.h  robot_joint.h  robot_node.h  utils.h
STM32/Core/Inc/robot/: Encoder.h  Motor.h  PID.h  VelocityJoint.h  VelocityJointAbstract.h  config_joint_example.h
STM32/Core/Inc/robot/node/: EncoderWithTopics.h  PIDwithTopics.h  TopicPublisher.h  TopicSubscriber.h  VelocityJointWithTopics.h  joint.h  node.h
STM32/Core/Inc/ros_lib/: BufferedSerial.hpp
STM32/Core/Inc/ros_lib/four_wheel_steering_msgs/: FourWheelSteering.h  FourWheelSteeringStamped.h
STM32/Core/Inc/ros_lib/ros/: node_handle.h
STM32/Core/Src/: main.c  mainpp.cpp  robot_Encoder.cpp  robot_Motor.cpp  robot_PID.cpp  robot_VelocityJoint.cpp  robot_joint.cpp  robot_node.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32/Core/Src/robot/: Encoder.cpp  Motor.cpp  PID.cpp  VelocityJoint.cpp  VelocityJointAbstract.cpp
STM32/Core/Src/robot/node/: EncoderWithTopics.cpp  PIDwithTopics.cpp  VelocityJointWithTopics.cpp  joint.cpp  node.cpp
STM32/Examples/: Encoder_example.cpp  Motor_example.cpp  VelocityJoint_example.cpp  VelocityJoint_rosserial_example.cpp  joint_example.cpp  joint_systick_example.cpp  measures_for_PID.cpp  robot_example.cpp  rosserial_example.cpp
