<?xml version="1.0"?>
<package format="2">
  <name>robot_navigation</name>
  <version>0.4.0</version>
  
  <description>The robot_navigation package</description>
  <license>MIT</license>

  <maintainer email="xav.jann1@gmail.com">Xavier Jannin</maintainer>
  <author email="xav.jann1@gmail.com">Xavier Jannin</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>move_base</build_depend>
  <build_depend>robot_control</build_depend>
  <build_depend>robot_description</build_depend>
  <build_depend>robot_hardware</build_depend>
  <build_export_depend>move_base</build_export_depend>
  <build_export_depend>robot_control</build_export_depend>
  <build_export_depend>robot_description</build_export_depend>
  <build_export_depend>robot_hardware</build_export_depend>
  <exec_depend>move_base</exec_depend>
  <exec_depend>robot_control</exec_depend>
  <exec_depend>robot_description</exec_depend>
  <exec_depend>robot_hardware</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
